--- a/web/public/manifest.json
+++ b/web/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Environment dashboard",
-  "name": "Environment dashboard",
+  "short_name": "EaDoMo",
+  "name": "EaDoMo",
   "icons": [
     {
       "src": "favicon.ico",
